# projet-implementation-polytech

./: README.md
rob5_implem/: CMakeLists.txt  package.xml
rob5_implem/launch/: boussole_launch.xml  suiviligne_launch.xml
rob5_implem/src/: camera.cpp  camera.hpp  encoder.cpp  encoder.hpp  hardware.cpp  hardware.hpp  magneto.cpp  magneto.hpp
